--- a/WebPage/htmlTest.html
+++ b/WebPage/htmlTest.html
@@ -7,7 +7,7 @@
     <title>北邮学生自救手册</title>
     <meta name="keywords" content="北京邮电大学, 北邮, 北邮自救手册, 学校生活" />
     <meta name="description" content="北京邮电大学新生入学手册指南" />
-    <link rel="stylesheet" href="csstest.css">
+    <link rel="stylesheet" href="cssTest.css">
 </head>
 <body>
 <header>
