--- a/WebPage/chatgpt.html
+++ b/WebPage/chatgpt.html
@@ -5,79 +5,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>静态网页示例</title>
     <style>
+        /* 这是一个多行注释，可以用于添加关于CSS部分的说明 */
+
         body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            margin: 0;
+            font-family: Arial, sans-serif; /* 设置整个页面的字体 */
+            display: flex; /* 使用弹性布局，将页面划分为两个侧栏 */
+            margin: 0; /* 去除页面默认的外边距 */
         }
 
         #sidebar {
-            width: 20%;
-            background-color: #f0f0f0;
-            padding: 20px;
+            width: 20%; /* 设置侧栏的宽度为页面宽度的 20% */
+            background-color: #f0f0f0; /* 设置侧栏的背景颜色 */
+            padding: 20px; /* 设置侧栏的内边距 */
         }
 
         #main-content {
-            width: 80%;
-            padding: 20px;
+            width: 80%; /* 设置主内容区的宽度为页面宽度的 80% */
+            padding: 20px; /* 设置主内容区的内边距 */
         }
 
         #top-bar {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px 0;
-            border-bottom: 1px solid #ccc;
+            display: flex; /* 使用弹性布局，将顶部栏的内容水平排列 */
+            justify-content: space-between; /* 将顶部栏的内容分散对齐，左右对齐 */
+            align-items: center; /* 将顶部栏的内容垂直居中对齐 */
+            padding: 10px 0; /* 设置顶部栏的内边距，上下各 10px */
+            border-bottom: 1px solid #ccc; /* 在顶部栏底部添加 1px 灰色边框 */
         }
 
         #login-btn,
         #register-btn {
-            padding: 5px 10px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            cursor: pointer;
+            padding: 5px 10px; /* 设置登录和注册按钮的内边距 */
+            background-color: #007bff; /* 设置按钮的背景颜色 */
+            color: #fff; /* 设置按钮的文本颜色为白色 */
+            border: none; /* 去除按钮的边框 */
+            cursor: pointer; /* 将鼠标悬停在按钮上时显示手型光标 */
         }
 
         #image-gallery {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            overflow-y: scroll;
-            max-height: 500px;
+            display: flex; /* 使用弹性布局，将图片按行排列 */
+            flex-wrap: wrap; /* 当图片超出容器宽度时，换行显示 */
+            gap: 20px; /* 设置图片之间的间隔为 20px */
+            overflow-y: scroll; /* 如果图片高度超过容器高度，添加垂直滚动条 */
+            max-height: 500px; /* 设置图片容器的最大高度为 500px */
         }
 
         .image {
-            width: calc(33.33% - 20px);
-            height: 200px;
-            background-color: #ddd;
+            width: calc(33.33% - 20px); /* 设置每张图片的宽度为容器宽度的三分之一减去间隔 */
+            height: 200px; /* 设置每张图片的高度为 200px */
+            background-color: #ddd; /* 设置图片的背景颜色为灰色 */
         }
 
         #navigation {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            display: flex; /* 使用弹性布局，将导航选项按列排列 */
+            flex-direction: column; /* 设置排列方向为垂直列 */
+            gap: 10px; /* 设置导航选项之间的间隔为 10px */
         }
 
         .nav-option {
-            font-weight: bold;
-            cursor: pointer;
+            font-weight: bold; /* 设置导航选项的文本为粗体 */
+            cursor: pointer; /* 将鼠标悬停在导航选项上时显示手型光标 */
         }
 
         .sublinks {
-            margin-left: 15px;
-            list-style: none;
-            padding: 0;
+            margin-left: 15px; /* 设置子链接的左侧外边距为 15px */
+            list-style: none; /* 去除子链接列表的默认样式 */
+            padding: 0; /* 去除子链接列表的内边距 */
         }
 
         .sublinks li {
-            margin-top: 5px;
+            margin-top: 5px; /* 设置子链接之间的上方间距为 5px */
         }
 
         .sublinks a {
-            text-decoration: none;
-            color: #333;
+            text-decoration: none; /* 去除子链接的下划线样式 */
+            color: #333; /* 设置子链接的文本颜色为深灰色 */
         }
+
     </style>
 </head>
 <body>
