--- a/WebPage/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem.html
@@ -63,29 +63,49 @@
         }
 
         #navigation {
-            display: flex; /* 使用弹性布局，将导航选项按列排列 */
-            flex-direction: column; /* 设置排列方向为垂直列 */
-            gap: 0px; /* 设置导航选项之间的间隔为 0px */
+            display: flex;
+            flex-direction: column;
+            gap: 0px;
         }
 
         .nav-option {
-            font-weight: bold; /* 设置导航选项的文本为粗体 */
-            cursor: pointer; /* 将鼠标悬停在导航选项上时显示手型光标 */
+            font-weight: bold;
+            cursor: pointer;
+            padding: 10px; /* 添加内边距以增加点击区域 */
+            transition: background-color 0.3s; /* 添加颜色渐变过渡效果 */
         }
 
         .sublinks {
-            margin-left: 0px; /* 设置子链接的左侧外边距为 10px */
-            list-style: none; /* 去除子链接列表的默认样式 */
-            padding: 0; /* 去除子链接列表的内边距 */
+            margin-left: 0px;
+            list-style: none;
+            padding: 0;
         }
 
         .sublinks li {
-            margin-top: 0px; /* 设置子链接之间的上方间距为 5px */
+            margin-top: 0px;
         }
 
         .sublinks a {
-            text-decoration: none; /* 去除子链接的下划线样式 */
-            color: #333; /* 设置子链接的文本颜色为深灰色 */
+            text-decoration: none;
+            color: #333;
+            transition: background-color 0.3s; /* 添加颜色渐变过渡效果 */
+            display: block;
+            padding: 5px; /* 添加内边距以增加点击区域 */
+        }
+
+        /* 鼠标悬停时导航选项和子链接的背景颜色变化 */
+        .nav-option:hover,
+        .sublinks a:hover {
+            background-color: #eee; /* 更改背景颜色 */
+        }
+
+        /* 设置不同层级的子链接的不同背景颜色 */
+        .sublinks:nth-child(odd) a {
+            background-color: #f0f0f0; /* 浅灰色背景 */
+        }
+
+        .sublinks:nth-child(even) a {
+            background-color: #e0e0e0; /* 更深的灰色背景 */
         }
 
     </style>
