侧栏主栏内边距修改

--- a/WebPage/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem.html
@@ -16,12 +16,12 @@
         #sidebar {
             width: 20%; /* 设置侧栏的宽度为页面宽度的 20% */
             background-color: #f0f0f0; /* 设置侧栏的背景颜色 */
-            padding: 20px; /* 设置侧栏的内边距 */
+            padding: 5px; /* 设置侧栏的内边距 */
         }
 
         #main-content {
             width: 80%; /* 设置主内容区的宽度为页面宽度的 80% */
-            padding: 20px; /* 设置主内容区的内边距 */
+            padding: 5px; /* 设置主内容区的内边距 */
         }
 
         #top-bar {
@@ -145,6 +145,14 @@
         <button id="register-btn">注册</button>
     </div>
     <div id="image-gallery">
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
+        <div class="image"></div>
         <div class="image"></div>
         <div class="image"></div>
         <div class="image"></div>
