--- a/WebPage/CanteenEvaluationSystem(CES)/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/CanteenEvaluationSystem.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>北京邮电大学餐饮评价系统</title>
-    <link rel="stylesheet" href="StyleForCES.css"> <!-- 这一行是用来调用StyleForCES.css文件的 -->
+    <link rel="stylesheet" href="StyleForCES.css"> <!--这一行是用来调用StyleForCES.css文件的 -->
 </head>
 <body>
 <div id="sidebar">
@@ -41,7 +41,12 @@
         <button id="register-btn">注册</button>
     </div>
     <div id="image-gallery">
-        <div class="image"></div>
+        <div class="image">
+            <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 1">
+            <div class="image-description">
+                餐馆介绍
+            </div>
+        </div>
         <div class="image"></div>
         <div class="image"></div>
         <div class="image"></div>
