优化图片显示

--- a/WebPage/CanteenEvaluationSystem(CES)/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/CanteenEvaluationSystem.html
@@ -44,7 +44,7 @@
         <div class="image">
             <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 1">
             <div class="image-description">
-                餐馆介绍
+                餐馆介绍(这个地方从数据库调)
             </div>
         </div>
         <div class="image"></div>
