--- a/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
@@ -8,34 +8,36 @@
 </head>
 <body>
 <div id="sidebar">
+    <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
     <div id="navigation">
-        <div class="nav-option" onclick="toggleSublinks('学生食堂')">学生食堂</div>
+        <div class="nav-option" onclick="toggleSublinks('学生食堂')">♦ 学生食堂</div>
         <ul class="sublinks" id="sublinks-学生食堂">
-            <li><a href="#">一层</a></li>
-            <li><a href="#">二层</a></li>
-            <li><a href="#">三层</a></li>
-            <li><a href="#">四层</a></li>
+            <a href="https://www.baidu.com/">•  一层 基本伙</a>
+            <a href="https://www.baidu.com/">•  二层 清真餐厅</a>
+            <a href="https://www.baidu.com/">•  三层</a>
+            <a href="https://www.baidu.com/">•  四层</a>
         </ul>
-        <div class="nav-option" onclick="toggleSublinks('综合食堂')">综合食堂</div>
+        <div class="nav-option" onclick="toggleSublinks('综合食堂')">♦ 综合食堂</div>
         <ul class="sublinks" id="sublinks-综合食堂">
-            <li><a href="#">一层</a></li>
-            <li><a href="#">二层</a></li>
-            <li><a href="#">三层</a></li>
+            <a href="#" onclick=" ">•  一层</a>
+            <a href="#" onclick=" ">•  二层</a>
+            <a href="#" onclick=" ">•  三层</a>
         </ul>
-        <div class="nav-option" onclick="toggleSublinks('风味餐厅')">风味餐厅</div>
+        <div class="nav-option" onclick="toggleSublinks('风味餐厅')">♦ 风味餐厅</div>
         <ul class="sublinks" id="sublinks-风味餐厅">
-            <li><a href="#">一层</a></li>
+            <a href="#">•  一层</a>
         </ul>
-        <div class="nav-option" onclick="toggleSublinks('其它')">其它</div>
+        <div class="nav-option" onclick="toggleSublinks('其它')">♦ 其它</div>
         <ul class="sublinks" id="sublinks-其它">
-            <li><a href="#">麦当劳</a></li>
-            <li><a href="#">物美餐饮</a></li>
+            <a href="www.baidu.com">•  麦当劳</a>
+            <a href="#">•  物美餐饮</a>
         </ul>
     </div>
 </div>
 <div id="main-content">
     <div id="top-bar">
-        <h1>北京邮电大学餐饮评价系统</h1>
+        <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
+        <h1>餐饮评价系统</h1>
         <input type="text" id="search-bar" placeholder="在这里搜索...">
         <button id="login-btn">登录</button>
         <button id="register-btn">注册</button>
