一个完整的没问题的小版本

--- a/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div id="sidebar">
-    <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
+    <!--  <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">  -->
+    <div id="currentDateTime"></div>
     <div id="navigation">
         <div class="nav-option" onclick="toggleSublinks('学生食堂')">♦ 学生食堂</div>
         <ul class="sublinks" id="sublinks-学生食堂">
@@ -128,6 +129,25 @@
             sublinks.style.display = 'none'; // 隐藏子选项
         }
     }
+
+    function updateDateTime() {
+        var currentDate = new Date();
+        var year = currentDate.getFullYear();
+        var month = (currentDate.getMonth() + 1).toString().padStart(2, '0');
+        var day = currentDate.getDate().toString().padStart(2, '0');
+        var hours = currentDate.getHours().toString().padStart(2, '0');
+        var minutes = currentDate.getMinutes().toString().padStart(2, '0');
+        var seconds = currentDate.getSeconds().toString().padStart(2, '0');
+
+        var dateTimeString = year + '-' + month + '-' + day + ' ' + hours + ':' + minutes + ':' + seconds;
+        document.getElementById('currentDateTime').textContent = dateTimeString;
+    }
+
+    // 更新时间
+    updateDateTime();
+    // 每隔一秒更新一次时间
+    setInterval(updateDateTime, 1000);
+
 </script>
 </body>
 </html>
