--- a/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
@@ -20,7 +20,7 @@
         </ul>
         <div class="nav-option" onclick="toggleSublinks('综合食堂')">♦ 综合食堂</div>
         <ul class="sublinks" id="sublinks-综合食堂">
-            <a href="#" onclick=" ">•  一层</a>
+            <a href="#" onclick=" ">•  一层(做onclick刷新imagegallery筛选对应层数的照片)</a>
             <a href="#" onclick=" ">•  二层</a>
             <a href="#" onclick=" ">•  三层</a>
         </ul>
