一个小的完整版

--- a/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
@@ -37,11 +37,21 @@
 </div>
 <div id="main-content">
     <div id="top-bar">
-        <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
-        <h1>餐饮评价系统</h1>
+        <div class="topbar-left">
+            <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
+            <h1>餐饮评价系统</h1>
+        </div>
+        <div class="topbar-right">
+            <div class="login-register">
+                <button id="login-btn">登录</button>
+                <button id="register-btn">注册</button>
+            </div>
+
+        </div>
+    </div>
+    <div class="search-bar">
         <input type="text" id="search-bar" placeholder="在这里搜索...">
-        <button id="login-btn">登录</button>
-        <button id="register-btn">注册</button>
+        <button id="search-btn">搜索</button>
     </div>
     <div id="image-gallery">
         <div class="image">
