--- a/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
+++ b/WebPage/CanteenEvaluationSystem(CES)/mo/CanteenEvaluationSystem.html
@@ -38,7 +38,9 @@
 <div id="main-content">
     <div id="top-bar">
         <div class="topbar-left">
-            <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
+            <a href="https://www.bupt.edu.cn/">
+                <img src="https://www.bupt.edu.cn/images/logo.png" alt="图标">
+            </a>
             <h1>餐饮评价系统</h1>
         </div>
         <div class="topbar-right">
@@ -56,11 +58,11 @@
         <div class="image">
             <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 1">
             <div class="image-description">
-                餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sita aliqua.
             </div>
         </div>
         <div class="image">
-            <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 2">
+            <img src="https://img.zcool.cn/community/0196a75e783753a80120a8958b1c09.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 2">
             <div class="image-description">
                 餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </div>
@@ -68,7 +70,7 @@
         <div class="image">
             <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 3">
             <div class="image-description">
-                餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sitpiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </div>
         </div>
         <div class="image">
@@ -84,7 +86,7 @@
             </div>
         </div>
         <div class="image">
-            <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 6">
+            <img src="https://img.zcool.cn/community/01dkc9w9pllokd5aiuyexk3438.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 6">
             <div class="image-description">
                 餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </div>
@@ -92,7 +94,7 @@
         <div class="image">
             <img src="https://img.zcool.cn/community/0174b45e783742a80120a8953780ea.jpg?x-oss-process=image/auto-orient,1/resize,m_lfit,w_1280,limit_1/sharpen,100/quality,q_100/format,webp" alt="Image 7">
             <div class="image-description">
-                餐馆介绍(这个地方从数据库调):Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                餐馆介绍(这个地方从数据库调):Lmporre magna aliqua.
             </div>
         </div>
         <div class="image">
